[tool.poetry]
name = "quantum-control"
version = "0.1.0"
description = ""
authors = ["Ivana <ivana.gyro@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.25.2"
qiskit = "^0.44.1"
qiskit-ibm-runtime = "^0.12.0"
matplotlib = "^3.7.2"
pylatexenc = "^2.10"


[tool.poetry.group.dev.dependencies]
yapf = "^0.40.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
